[tool.poetry]
name = "lcl"
version = "0.1.0"
description = ""
authors = ["Bulat Kurbanov <kurbanovbul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
